<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/oval_dialog_update_pwd"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/dismiss_sure"
        android:textColor="@color/white_66"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure_dismiss"
            android:textColor="@color/white_66"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:textColor="@color/white_66"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_info"
            android:textColor="@color/white_66"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_info"
        android:textColor="@color/green_31d09a"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDismissOrderDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_lb_circle_dialog"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/font_four"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvDetermineOrderDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_rb_circle_dialog"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/determine"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>