<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shadow_project_undergo"
    android:orientation="vertical"
    android:padding="17dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRequiresListItemTitle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/font_four"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRequiresListItemState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_guide_button"
                android:paddingBottom="6dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="6dp"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvRequiresListItemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/oval_worker_type_select"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="5dp"
                android:text="5/10"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_construction_time"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRequiresListItemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demand_item_area"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRequiresListItemArea"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/construction_area"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_worker_tye"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRequiresListItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_register_type"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demand_item_description"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRequiresListItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>