<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/oval_dialog_update_pwd"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/withdraw"
        android:textColor="@color/white_66"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etWithdrawPwdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval_edit"
        android:hint="@string/input_withdraw_pwd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/font_four"
        android:textColorHint="@color/search_hint"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWithdrawSettingPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_lb_circle_dialog"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/mine_setting_pwd"
            android:textColor="@color/font_four"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvWithdrawDetermine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_rb_circle_dialog_yellow"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/determine"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>