<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentWorkerPerfectData"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.tch.youmuwa.ui.activity.login.WorkerPerfectDataActivity">

    <include layout="@layout/title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/work_register_name"
                android:textColor="@color/font_four"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etPerfectRName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:gravity="right"
                android:hint="@string/work_hint_name"
                android:maxLines="1"
                android:textColor="@color/font_four"
                android:textColorHint="@color/font_seven"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_e5"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/work_register_identity"
                android:textColor="@color/font_four"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etPerfectRCode"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:gravity="right"
                android:hint="@string/work_hint_identity"
                android:maxLength="18"
                android:maxLines="1"
                android:textColor="@color/font_four"
                android:textColorHint="@color/font_seven"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_e5"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/work_register_sex"
                android:textColor="@color/font_four"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etWPerfectRAge"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="right"
                android:hint="0"
                android:maxLines="1"
                android:textColor="@color/font_four"
                android:textColorHint="@color/font_seven"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_e5"></View>

        <RelativeLayout
            android:id="@+id/rlTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/work_register_type"
                android:textColor="@color/font_four"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWorkerType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_hint_type"
                    android:textColor="@color/font_seven"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/down_select" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_e5"></View>

        <RelativeLayout
            android:id="@+id/rlWorkYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/work_register_years"
                android:textColor="@color/font_four"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWorkerYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_hint_years"
                    android:textColor="@color/font_seven"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/down_select" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_e5"></View>

        <RelativeLayout
            android:id="@+id/rlWorkArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/work_register_area"
                android:textColor="@color/font_four"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWorkerArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_hint_area"
                    android:textColor="@color/font_seven"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/down_select" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_e5"></View>

        <Button
            android:id="@+id/btWorkerRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/worker_button_sel"
            android:text="@string/register_into"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTermsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivWorkerTermsSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/worker_terms_service_select" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/terms_service_info"
            android:textColor="@color/font_four"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvWorkerTermsServiceContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_service_bt"
            android:textColor="@color/font_yellow"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
